# shai-hulud-scanner

./: .gitignore  CLAUDE.md  README.md  anti-worm.md  baseline_iocs.py  main.py  pyproject.toml  shai_hulud_scanner.py
scripts/: update_baseline.py
